--- a/css/reset-stylesheet.css
+++ b/css/reset-stylesheet.css
@@ -192,3 +192,30 @@ background-color: #f2f2f2;
      
 }
 /*############## FOOTER #################*/
+footer{
+    width: calc(100% - 80px );
+    padding: 40px 40px;
+    background-color: #111;
+    margin-top: 20px;
+    overflow: hidden;
+}footer ul{
+    width: fit-content;
+    float: left;
+    padding-left: 20px;
+}footer ul li{
+ display: block;
+ list-style: none;
+}footer ul li a {
+  font-family: Georgia, 'Times New Roman', Times, serif; 
+  font-size: 30px;  
+  color: #fff;
+  line-height:20px;
+}.footer-links-cases{
+    display: none;
+}.footer-social-media{
+    width: 60px;
+    float: right;
+}.footer-social-media img{
+    width: 100%;
+    margin-bottom: 10px;
+}
