--- a/css/test.css
+++ b/css/test.css
@@ -1,37 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-   
-}
 
-.container{
-    width: 100%;
-    height: 400px;
-    background-color: #ccc;
-    /*column-count: 4;*/
+
+.gallery-links{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-   
-    
-    margin: 5px 5px 5px 5px;
-    padding: 10px ;
-    text-align: justify start ;
-    
-    
 }
-.itemx{
-    order: 1;
-    background-color: aqua;
-    flex-basis: 30%;
-}.itemx{
-    order: 2;
-    background-color: rgb(50, 139, 23);
-    flex-basis: 30%;
+
+.gallery-img{
+    flex-basis: 26%;
+   margin: auto;
 }
-.item{
-    order: 1;
-    background-color: aqua;
-    flex-basis: 25%;
+
+.gallery-img img{
+    width: 100%;
 }
