--- a/css/reset-stylesheet.css
+++ b/css/reset-stylesheet.css
@@ -416,6 +416,34 @@ font-family: Verdana, Geneva, Tahoma, sans-serif;
   
   
   }
+
+  /* ############ Flexbox  ################*/
+
+.gallery-links{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: 10px;
+}
+
+.gallery-img{
+  flex-basis: 22%;
+ margin: auto;
+}
+
+.gallery-img img {
+  width: 100%;
+}
+
+.gallery-img  p {
+  width: 100%;
+}
+
+.gallery-img  h3 {
+  width: 100%;
+}
+
+/* ############ Flexbox  ################*/
 /*############## FOOTER #################*/
 footer {
   width: calc(100% - 80px);
