--- a/css/reset-stylesheet.css
+++ b/css/reset-stylesheet.css
@@ -283,7 +283,7 @@ header .header-cases {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 28px;
-  font-weight: 40;
+  font-weight: 100;
   font-style: italic;
   color: #fff;
   text-align: center;
@@ -480,7 +480,12 @@ footer ul li a {
   float: right;
 }
 .footer-social-media img {
+  
+
+  height: auto;
   width: 100%;
+
+
   margin-bottom: 5px;
   margin-top: 20px;
   padding-top: 5%;
