--- a/css/test.css
+++ b/css/test.css
@@ -1,37 +1,28 @@
 *{
     margin: 0;
     padding: 0;
-   
+  
 }
 
-.container{
-    width: 100%;
-    height: 400px;
-    background-color: #ccc;
-    /*column-count: 4;*/
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+table{
+
+    width: 400px;
+    
+    outline: auto;
+    margin: 20px;
    
-    
-    margin: 5px 5px 5px 5px;
-    padding: 10px ;
-    text-align: justify start ;
-    
-    
+}tr{
+
+    text-align: center;
+    outline: auto;
 }
-.itemx{
-    order: 1;
-    background-color: aqua;
-    flex-basis: 30%;
-}.itemx{
-    order: 2;
-    background-color: rgb(50, 139, 23);
-    flex-basis: 30%;
+th{
+    outline: auto;
+    margin: 3px;
+    background-color: rgba(8, 245, 8, 0.133);
 }
-.item{
-    order: 1;
-    background-color: aqua;
-    flex-basis: 25%;
+td{
+
+    outline: auto;
+    background-color: rgba(20, 17, 34, 0.133);
 }
