--- a/css/reset-stylesheet.css
+++ b/css/reset-stylesheet.css
@@ -448,7 +448,7 @@ header .header-cases {
 /* ############ Flexbox  ################*/
 /*############## FOOTER #################*/
 footer {
-  width: calc(100% - 80px);
+  /*width: calc(100% - 80px);*/
   padding: 40px 40px;
   background-color: #111;
   margin-top: 20px;
