--- a/css/404.css
+++ b/css/404.css
@@ -1,3 +1,14 @@
+header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: white;
+  width: 100%;
+  height: 100px;
+}
+
+
 HTML CSSResult Skip Results Iframe
 EDIT ON
 
@@ -14,11 +25,11 @@ EDIT ON
  }
  
  
- .four_zero_four_bg h1{
+ .four_zero_four_bg {
  font-size:80px;
  }
  
-  .four_zero_four_bg h3{
+  .four_zero_four_bg {
        font-size:80px;
        }
        
@@ -33,3 +44,5 @@ EDIT ON
 
 
 Resources1× 0.5× 0.25×Rerun
+
+
