--- a/css/reset-stylesheet.css
+++ b/css/reset-stylesheet.css
@@ -178,9 +178,11 @@ select {
 }
 main {
   padding-top: 100px;
+  min-height: 100%;
 }
 body {
   background-color: #e4e1e1;
+  height: 100%;
 }
 
 /*############## header #################*/
@@ -475,7 +477,7 @@ footer {
   /*width: calc(100% - 80px);*/
   padding: 40px 40px;
   background-color: #111;
-  margin-top: 20px;
+  margin-top: 0px;
   overflow: hidden;
 }
 footer ul {
@@ -593,20 +595,32 @@ footer ul li a {
   display: grid;
 gap: 5px;
 grid-template-rows: auto auto auto;
-grid-template-columns: auto auto ;
+grid-template-columns: auto  auto;
 margin: 5px;
 }
 
-.item1 { grid-area: main1; background-color: }
-.item2 { grid-area: main2; }
-.item3 { grid-area: menu;  background-color: #ffffff; }
+.item1 { grid-area: main1 ; justify-self: center; }
+.item2 { grid-area: main2; justify-self: center; }
+.item3 { grid-area: menu;  background-color: #ffffff; justify-self: auto; }
 
 .grid-container {
   display: grid;
   grid-template-areas:
-    'menu menu menu main1 main1 main2 main2 '
-    'menu menu menu  main1 main1 main2 main2 '
-    'menu menu  menu main1 main1 main2 main2 ';
+    '. menu  main1 main2 . '
+    '. menu  main1 main2 . '
+    '. menu  main1 main2 . ';
   grid-gap: 10px;
   padding: 10px;
+}
+/* map */
+
+iframe{
+
+  height: 300px;
+  width: 100%;
+  
+  
+}#map{
+  margin: 1px;
+  background-color: #222;
 }
