--- a/css/Website_Layouts_Using_CSS_Grid_.css
+++ b/css/Website_Layouts_Using_CSS_Grid_.css
@@ -8,6 +8,13 @@
     grid-template-columns: 33% 33% 33%;
 }
 
+.item1 {
+    grid-row-start: 2;
+  }
+
+  .item2 {
+    grid-row-end: span 3;
+  } 
 .grid div:nth-child(even){
     background-color: red;
 }
